= Changelog

=== Version 0.2.0 - 2007-08-11

* Initial public release
* Added daemonizing of server
* Added launching of browser to server URL

=== Version 0.1.0

* rename project to 'heel'
* gem packaging

=== Version 0.0.1 - 2007-05-03

* initial development release 
