@@ -1,2 +1,1 @@
-* Automatically launch a browser 
-* correctly pick the right localhost '*' or the such when launching
+* fix dir_handler and error_handler specs
