@@ -3,7 +3,7 @@ require 'heel'
 module Heel
     class Version
         MAJOR   = 0 
-        MINOR   = 2 
+        MINOR   = 3 
         BUILD   = 0 
 
         class << self
