@@ -1,5 +1,11 @@
 = Changelog
 
+=== Version NEXT 
+
+* update with Launchy requirement 0.3.0
+* remove unneeded famfamfam icons
+* change default listening address to 127.0.0.1
+
 === Version 0.2.0 - 2007-08-11
 
 * Initial public release
